--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                 document.getElementById("uploads-list").innerHTML += `<li><a href="${doc.data().url}" target="_blank">${doc.data().name}</a></li>`;
             });
             <link rel="stylesheet" href="styles.css">
+                <button id="theme-toggle">Toggle Dark Mode</button>
         }
         fetchUploads();
     </script>
